# kommit-qt-creator-plugin

./: CMakeLists.txt  PluginTest.json.in  README.md  pane.cpp  pane.h  plugintest.cpp  plugintest.h  plugintest_global.h  plugintestconstants.h  sideitem.cpp  sideitem.h
.github/workflows/: build_cmake.yml
